--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/** @format */
-
 * {
   margin: 0;
   padding: 0;
@@ -48,4 +46,10 @@ h1 {
 label {
   font-size: 18px;
   font-weight: 700;
+}
+
+@media (max-width: 600px) {
+  form {
+    width: 80%;
+  }
 }
